<resources>
    <string name="app_name">Movie Bucket</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- General Strings -->
    <string name="movie_bucket_add_action_string">Add to Movie Bucket</string>

    <!-- common -->
    <string name="common_done">Done</string>
    <!-- sorting filter labels -->
    <string name="sort_upcoming">Upcoming</string>
    <string name="sort_popular">Popular</string>
    <string name="sort_top_rated">Top Rated</string>
    <string name="sort_in_theaters">In Theaters</string>

    <!-- ListingPreferencesFragment Strings -->
    <string name="listingpref_sortby">Sort By</string>
    <string name="listingpref_year">Year</string>
    <string name="listingpref_genre">Genre</string>
    <string name="listingpref_rating">Rating</string>

    <!-- DetailFragment Strings -->
    <string name="movie_detail_trailer_heading_string">Trailers</string>
    <string name="movie_detail_series_heading_string">Series</string>

    <!-- Content Descriptions -->
    <string name="movie_detail_backdrop_content_description_string">Movie Backdrop</string>
    <string name="listing_cardview_image_poster_description">Movie Poster</string>

    <!--- MENUS -->
    <!-- Listing Common-->
    <string name="action_listing_sort">Sort</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="listing_item_action_open">Open</string>
    <string name="listing_item_action_share">Share</string>

    <!-- Listing Activity -->
    <string name="listing_activity_local_listing_toolbar_label">Saved Movies</string>

    <string-array name="movie_feeds">
        <item>Upcoming</item>
        <item>Now Playing</item>
        <item>Top Rated</item>
        <item>Popular</item>
    </string-array>

    <!-- Searching -->
    <string name="search_hint">Movie Title</string>
    <string name="common_any">Any</string>
</resources>
